CSS: The top nav bar no longer line-wraps
The bottom one still does.

--- a/templates/style/css/o-blog.css
+++ b/templates/style/css/o-blog.css
@@ -1486,6 +1486,8 @@ html {
 
 .supernav_list {
     list-style: none outside none;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .supernav_list li {
     display: inline-block;
